src/css/style.css
@font-face {
  font-family: gf;
  src: url(../assets/rammetto.ttf);
}

html,
* {
  padding: 0;
  margin: 0;
}

body {
  padding: 0;
  margin: 0;
  border: black 2px solid;
  background-color: green;
  max-width: 100vw;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;

  font-family: gf;
  font-size: 2rem;
}



.root {
  background-color: aqua;
}

.screen {
  background: rgb(113, 186, 212);
  background: linear-gradient(4deg, rgba(113, 186, 212, 1) 0%, rgba(77, 147, 167, 1) 40%, rgba(0, 212, 255, 1) 100%);
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 100vw;
  min-height: 100vh;
 
}

/* splash */
.splash-screen {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1rem;
}

.logo {
  width: 65vw;
}

.loading {}

.version-note {
  position: absolute;
  top: 10px;
  left: 10px;
}


/* home home-screen */
.home-screen {}

.home-instructions{
  
  font-size: 1rem;
  margin-bottom: 10vh;
}


/* game-screen */
.game-screen {}

.light {
  min-width: 30px;
  min-height: 30px;
  max-width: 30px;
  max-height: 30px;
  background-color: green;
  border-radius: 100%;
}

.simon {
  display: flex;
  flex-direction: column;
}

.simon-button {
  width: 30vw;
  max-height: 200px;
  max-width: 200px;
}

.light-container{
  margin-bottom: 15vh;
}

.light{
  margin-bottom: 20px;
}

.score {
  margin-top: 15vh;
}

.popup {
  background-color: gray;
  border: black solid 8px;
  border-radius: 20px;
  position:absolute;
  top: 50%; right: 50%;
  transform: translate(50%,-50%);
  width: 80vw;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 100px 0;

  font-size: 1rem;
  text-align: center;
}

/* utility calsses */

.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

.test {
  background-color: red;
}

.show-inline {
  display: inline;
  text-align: center;
}

.show {
  display: flex;
  text-align: center;
}

.hide {
  display: none;
}



.btn {
  background: #4cabeb;
  background-image: -webkit-linear-gradient(top, #4cabeb, #1f70a3);
  background-image: -moz-linear-gradient(top, #4cabeb, #1f70a3);
  background-image: -ms-linear-gradient(top, #4cabeb, #1f70a3);
  background-image: -o-linear-gradient(top, #4cabeb, #1f70a3);
  background-image: linear-gradient(to bottom, #4cabeb, #1f70a3);
  -webkit-border-radius: 60;
  -moz-border-radius: 60;
  border-radius: 60px;
  -webkit-box-shadow: 1px 3px 7px #666666;
  -moz-box-shadow: 1px 3px 7px #666666;
  box-shadow: 1px 3px 7px #666666;
  font-family: Arial;
  color: #ffffff;
  font-size: 20px;
  padding: 20px 40px 20px 40px;
  border: solid #2282bd 2px;
  text-decoration: none;
}

.btn:hover {
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
  text-decoration: none;
}

